--- a/nodejs_practice/hello.html
+++ b/nodejs_practice/hello.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <script src="hello.js"></script>
+        <script src="prototype_inh.js"></script>
     </body>
 </html>
